# grimoire-css

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASES.md  ROADMAP.md  codecov.yml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build_release.yml  extension_quality.yml  extension_release.yml  quality.yml  sync_release_notes.yml  version_check.yml
benchmark/: README.md  dhat-heap.json  grimoire.config.json  main.py  package-lock.json  package.json  requirements.txt
benchmark/core/: benchmark_formatter.py  metrics_collector.py  project_creator.py  report_generator.py
benchmark/grimoire/config/: grimoire.config.json
benchmark/results/: result_20250323_111448.json  result_20250323_111448_pretty.json  result_20251226_155808.json  result_20251226_155808.txt  result_20251226_155808_pretty.json  result_20251226_155838.json  result_20251226_155838.txt  result_20251226_155838_pretty.json  result_20251226_155901.json  result_20251226_155901.txt  result_20251226_155901_pretty.json  result_20251226_155926.json  result_20251226_155926.txt  result_20251226_155926_pretty.json  result_20251227_012340.json  result_20251227_012340.txt  result_20251227_012340_pretty.json  result_20251227_012409.json  result_20251227_012409.txt  result_20251227_012409_pretty.json  result_20251227_012425.json  result_20251227_012425.txt  result_20251227_012425_pretty.json  result_20251227_012441.json  result_20251227_012441.txt  result_20251227_012441_pretty.json  result_20251227_012458.json  result_20251227_012458.txt  result_20251227_012458_pretty.json  result_20251227_012514.json  result_20251227_012514.txt  result_20251227_012514_pretty.json
content/: about.md  animations.md  animations.txt  animations_css.txt  badges.md  circle.md  desk.md  hero_image.md  note.md  release_info.md  slogan.md
error_scenarios/: 3.html  4.html
error_scenarios/grimoire/config/: grimoire.config.json
extensions/vscode/: .vscodeignore  LICENSE  README.md  biome.json  esbuild.mjs  package-lock.json  package.json  tsconfig.json
extensions/vscode/grimoire/: grimoire.lock.json  reset.css
extensions/vscode/src/: extension.ts
releases/: v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v1.7.0.md  v1.7.1.md  v1.8.0.md  v1.8.1.md
releases/changelog/: v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v1.7.0.md  v1.7.1.md  v1.8.0.md  v1.8.1.md
repro/error_scenarios/: 1.html  2.html  5.html  6.html
repro/templated_scrolls/: templated_scrolls.html
scripts/: coverage.sh  generate_changelog.py  generate_docs.sh  generate_releases.py  generate_releases.sh  pre_publish.sh  seed_changelog_entries.py
src/: buffer.rs  lib.rs  main.rs
src/analyzer/: mod.rs
src/commands/: build.rs  fi.rs  handler.rs  init.rs  mod.rs  shorten.rs
src/core/: animations.rs  build_info.rs  color.rs  compiled_css.rs  component.rs  config-schema.json  config.rs  css_builder.rs  css_generator.rs  css_optimizer.rs  file_tracker.rs  filesystem.rs  grimoire_css_error.rs  mod.rs  parser.rs  source_file.rs  spell.rs  spell_value_validator.rs
src/core/animations/: back-in-left.css  back-out-down.css  bg-pan-bl.css  bg-pan-bottom.css  bg-pan-left.css  bg-pan-right.css  bg-pan-tl.css  bg-pan-tr.css  blur-out-contract.css  bounce-bottom.css  bounce-in-fwd.css  bounce-in-right.css  bounce-in-top.css  bounce-out-fwd.css  bounce-out-top.css  bounce-out-up.css  bounce.css  color-change-4x.css  fade-in-bottom-left.css  fade-in-bottom-right.css  fade-in-down-big.css  fade-in-left-big.css  fade-in-right-big.css  fade-in-tl.css  fade-in-top-left.css  fade-in-top-right.css  fade-in-top.css  fade-in-tr.css  fade-in.css  fade-out-bck.css  fade-out-bottom-left.css  fade-out-bottom-right.css  fade-out-down.css  fade-out-fwd.css  fade-out-left-big.css  fade-out-top-left.css  fade-out-top.css  fade-out-tr.css  fade-out-up.css  fade-out.css  (+310 more)
src/core/config/: config-schema.json  config_fs.rs  config_in_memory.rs  mod.rs
src/core/css_builder/: css_builder_base.rs  (+3 more)
src/infrastructure/: diagnostics.rs  lightning_css_optimizer.rs  mod.rs
src/lsp/: mod.rs  server.rs
tests/: analyzer_public_api.rs  analyzer_refs_lint.rs  fi_cli_json.rs  lsp_stdio.rs
(+412 files in other folders)
