[package]
name = "grimoire_css"
version = "1.7.1"
edition = "2024"
rust-version = "1.88"
authors = ["Dmitrii Shatokhin <dmtrshatokhin@gmail.com>"]
description = "A magical CSS engine for all environments"
license = "MIT"
keywords = ["css", "css-compiler", "styling", "web", "system"]
categories = ["web-programming", "development-tools"]
homepage = "https://github.com/persevie/grimoire-css"
documentation = "https://docs.rs/grimoire-css"
repository = "https://github.com/persevie/grimoire-css"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "assets/grimoire-css-logo.png",
]

[lib]
name = "grimoire_css_lib"
crate-type = ["lib"]

[profile.release]
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = 2

[dependencies]
console = "0.16.2"
dhat = { version = "0.3.3", optional = true }
glob = "0.3.3"
grimoire_css_color_toolkit = "1.0.0"
indicatif = "0.18.3"
lazy_static = "1.5.0"
lightningcss = { version = "1.0.0-alpha.68", features = ["browserslist"] }
miette = { version = "7.6.0", features = ["fancy"] }
once_cell = "1.21"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"

[features]
heap-profile = ["dhat"]

[dev-dependencies]
tempfile = "3.24.0"
